fixed max-dark mode

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <a class="navbar-brand mx-auto" href="index.html">Navbar brand</a>
+            <a id="main-a-Nav" class="navbar-brand mx-auto" href="index.html">Navbar brand</a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <!--nightmode toggle icon in mobile-->
                 <button class="btn text-right text-white" type="button" style="margin-right: 5px;">
-                    <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
+                    <i id="dark-mode-button" onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
                 </button>
                 <!--overlay content start-->
                 <div class="overlay-content d-flex justify-content-start" style="padding-left:15px;" id="navbarToggler">
@@ -58,7 +58,7 @@
             </div>
 
             <!--normal navbar for large and extra large devices-->
-            <div class="collapse navbar-collapse d-x-flex justify-content-end" data-aos="fade-down">
+            <div id="desk-display" class="collapse navbar-collapse d-x-flex justify-content-end" data-aos="fade-down">
                 <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
                        <a class="nav-link active" href="index.html">Home</a>
@@ -88,7 +88,7 @@
             </button>
         </nav>
         
-        <header class="masthead text-center text-white d-flex" style="width: 100%;">
+        <header id="full-head" class="masthead text-center text-white d-flex" style="width: 100%;">
             <div class="container my-auto mx-auto" data-aos="fade-down">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
@@ -154,46 +154,47 @@
                     <div class="tab-content pt-3" id="myTabContent">
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/angular.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/html5.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/css.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/js.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="react" src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="angular" src="assets/img/angular.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="html5" src="assets/img/html5.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="css" src="assets/img/css.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="js" src="assets/img/js.png" style="width: 50px; height: 50px;"></a></div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/php.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/python.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/java.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/node.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/rails.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="php" src="assets/img/php.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="python" src="assets/img/python.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="java" src="assets/img/java.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="node" src="assets/img/node.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="rails" src="assets/img/rails.png" style="width: 50px; height: 50px;"></a></div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/ios.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/android.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/flutter.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="ios" src="assets/img/ios.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="android" src="assets/img/android.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="react1" src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="flutter" src="assets/img/flutter.png" style="width: 50px; height: 50px;"></a></div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="cms" role="tabpanel" aria-labelledby="cms-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/wordpress.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/magento.png" style="width: 50px; height: 50px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/shopify.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="wordpress" src="assets/img/wordpress.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="magento" src="assets/img/magento.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img id="shopify" src="assets/img/shopify.png" style="width: 50px; height: 50px;"></a></div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="db" role="tabpanel" aria-labelledby="db-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/mysql.png" style="width: 60px; height: 60px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/mongodb.png" style="width: 60px; height: 60px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/oracle.png" style="width: 60px; height: 60px;"></a></div>
-                                <div class="col"><a href="#"><img src="assets/img/firebase.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img id="mysql" src="assets/img/mysql.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img id="mongodb" src="assets/img/mongodb.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img id="oracle" src="assets/img/oracle.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img id="firebase" src="assets/img/firebase.png" style="width: 60px; height: 60px;"></a></div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -290,7 +291,7 @@
 
         <!--values start-->
         <section class="values">
-            <div class="container my-5 px-5 shadow p-3 mb-5 bg-white rounded-3 start">
+            <div class="container my-5 px-5 start">
                 <div class="d-flex align-items-end">
                     <div class="nav flex-column nav-pills mx-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                       <a class="nav-link active mt-5" id="v-pills-home-tab" data-bs-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><h1>Discover</h1></a>
@@ -443,6 +444,8 @@
             $(document).ready(function(){
             $(window).scroll(function(){
                 var scroll = $(window).scrollTop();
+                var ele = document.getElementById('dark-mode-button').classList;
+                console.log(ele);
                 if (scroll > 300) {
                     $("#mainNav").css("background" , "#37474F");
                     $(".navbar-brand").css("color", "white");
@@ -455,6 +458,9 @@
                 }
 
                 else{
+                    if(ele[2]!=null){
+                        $(".nav-link").css("color", "white");
+                    }
                     $("#mainNav").css("background" , "transparent");
                     $(".navbar-brand").css("color", "black");  	
                     $(".nav-link").css("color", "black");
