fixed minor bugs

--- a/about.html
+++ b/about.html
@@ -193,83 +193,101 @@
         </section>
         <!--newsletter subscription ends-->
         
-                <!--contact form-->
-                <section class="contact">
-                    <div class="container pt-5">
-                        <div class="row px-3">
-                            <div class="col-lg-6" data-aos="fade-down">
-                                <h2>Talk with Us</h2>
-                                <p class="pt-3">Discuss your plans with us</p>
-                                <form action="#" class="row">
-                                    <div class="col-lg-10 pt-3 px-3 ">
-                                      <input type="text" class="form-control form-control-lg" id="validationServer01" required placeholder="Name">
-                                      <div class="valid-feedback">
-                                        Looks good!
-                                      </div>
-                                    </div>
-                                    <div class="col-lg-3 pt-3 px-3">
-                                        <select id="inputState" class="form-select form-control-lg">
+         <!--contact form-->
+         <section class="contact">
+            <div class="container pt-5">
+                <div class="row px-3">
+                    <div class="col-lg-6" data-aos="fade-down">
+                        <h2>Talk with Us</h2>
+                        <p class="pt-3">Discuss your plans with us</p>
+                        <form action="#" class="row">
+                            <div class="col-lg-10 pt-3 px-3 ">
+                              <input type="text" class="form-control" id="validationServer01" required placeholder="Name">
+                              <div class="valid-feedback">
+                                Looks good!
+                              </div>
+                            </div>
+                            <div class="col-lg-10 pt-3 px-3 ">
+                                <input type="email" class="form-control" id="validationServer01" required placeholder="Email">
+                                <div class="valid-feedback">
+                                  Looks good!
+                                </div>
+                              </div>
+                            <div class="col-lg-10 pt-3 px-3">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <select id="inputState" class="form-select">
                                         <option selected>Code *</option>
                                         <option>+91</option>
                                         <option>+1</option>
+                                        <option>+971</option>
+                                        <option>+44</option>
                                         </select>
                                     </div>
-                                    <div class="col-lg-7 pt-3 px-3 ">
-                                        <input type="text" class="form-control form-control-lg" id="validationServer01" required placeholder="Contact">
+                                    <div class="col-8">
+                                        <input type="text" class="form-control" id="validationServer01" required placeholder="Contact">
                                         <div class="valid-feedback">
                                         Looks good!
                                         </div>
                                     </div>
-                                    <div class="col-lg-10 pt-3 px-3 mb-3">
-                                        <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
-                                    </div>
-                                    <div class="col-lg-4 py-3">
-                                      <button class="btn btn-outline-dark rounded-pill " type="submit" style="font-weight: 600;">SUBMIT</button>
-                                    </div>
-                                  </form>
+                                </div>
                             </div>
-                            <div class="col-lg-6 pt-3" data-aos="fade-down">
-                                <div class="row">
-                                    <div class="row pb-3">
-                                        <div class="col-lg-6"><h2>Join With Us</h2></div>
-                                        <div class="col-lg-6"><button type="button" class="btn btn-outline-dark rounded-pill" style="font-weight: 600;">APPLY NOW</button></div>
-                                    </div>
-                                    <div class="row explore-more pt-2">
-                                        <div class="col-lg-8"><h2>Explore more</h2></div>
-                                        <div class="col-lg-8">
-                                            <ul class="footer-links">
-                                                <li class="footer-item py-2">
-                                                    <a class="footer-link" href="index.html">Home</a>
-                                                </li>
-                                                <li class="footer-item py-2">
-                                                    <a class="footer-link" href="about.html">About Us</a>
-                                                </li>
-                                                <li class="footer-item py-2">
-                                                    <a class="footer-link" href="contact.html">Contact</a>
-                                                </li>
-                                                <li class="footer-item py-2">
-                                                    <a class="footer-link" href="blog.html">Blog</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="row social-media">
-                                        <h2>Follow us</h2>
-                                        <div class="row py-3">
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
-                                           <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
-                                        </div>
-                                    </div>
+                            <div class="col-lg-10 pt-3 px-3 mb-3">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                            </div>
+                            <div class="col-lg-4 py-3">
+                              <button class="btn btn-outline-dark rounded-pill " type="submit" style="font-weight: 600;">SUBMIT</button>
+                            </div>
+                          </form>
+                    </div>
+                    <div class="col-lg-6 pt-3" data-aos="fade-down">
+                        <div class="row">
+                            <div class="row pb-3">
+                                <div class="col-lg-6"><h2>Join With Us</h2></div>
+                                <div class="col-lg-6"><button type="button" class="btn btn-outline-dark rounded-pill" style="font-weight: 600;">APPLY NOW</button></div>
+                            </div>
+                            <div class="row explore-more pt-2">
+                                <div class="col-lg-8"><h2>Explore more</h2></div>
+                                <div class="col-lg-8">
+                                    <ul class="footer-links">
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="about.html">About Us</a>
+                                        </li>
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="about.html">Careers</a>
+                                        </li>
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="blog.html">Blog</a>
+                                        </li>
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="blog.html">Privacy Policy</a>
+                                        </li>
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="blog.html">Terms and Conditions</a>
+                                        </li>
+                                        <li class="footer-item py-2">
+                                            <a class="footer-link" href="blog.html">Contact</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row social-media">
+                                <h2>Follow us</h2>
+                                <div class="row py-3">
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </section>
-                <!--contact form ends-->
+                </div>
+            </div>
+        </section>
+        <!--contact form ends-->
 
         <!--footer starts-->
         <section id="footer">
