--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         
     </head>
     <body>
-        <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav id="blogmainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
@@ -86,6 +86,121 @@
         
         <!--blog-->
 
+        <!--newsletter subscription start-->
+        <section class="news">
+            <div class="container">
+                <div class="row" data-aos="fade-down">
+                    <h1 class="cd-hire mt-5 animate__animated animate__pulse">Subscribe to our newsletter</h1>
+                    <form action="#">
+                    <div class="col-lg-6 mt-3 mb-5">
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="col-lg-6 mt-3 mb-5">
+                        <button type="submit" class="btn btn-outline-dark rounded-pill">Subscribe Now!</button>
+                    </div>
+                </form>
+                </div>
+            </div>
+        </section>
+        <!--newsletter subscription ends-->
+
+             <!--contact form-->
+             <section class="contact">
+                <div class="container pt-5">
+                    <div class="row px-3">
+                        <div class="col-lg-6" data-aos="fade-down">
+                            <h2>Talk with Us</h2>
+                            <p class="pt-3">Discuss your plans with us</p>
+                            <form action="#" class="row">
+                                <div class="col-lg-10 pt-3 px-3 ">
+                                  <input type="text" class="form-control" id="validationServer01" required placeholder="Name">
+                                  <div class="valid-feedback">
+                                    Looks good!
+                                  </div>
+                                </div>
+                                <div class="col-lg-10 pt-3 px-3 ">
+                                    <input type="email" class="form-control" id="validationServer01" required placeholder="Email">
+                                    <div class="valid-feedback">
+                                      Looks good!
+                                    </div>
+                                  </div>
+                                <div class="col-lg-10 pt-3 px-3">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <select id="inputState" class="form-select">
+                                            <option selected>Code *</option>
+                                            <option>+91</option>
+                                            <option>+1</option>
+                                            <option>+971</option>
+                                            <option>+44</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-8">
+                                            <input type="text" class="form-control" id="validationServer01" required placeholder="Contact">
+                                            <div class="valid-feedback">
+                                            Looks good!
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-10 pt-3 px-3 mb-3">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                                </div>
+                                <div class="col-lg-4 py-3">
+                                  <button class="btn btn-outline-dark rounded-pill " type="submit" style="font-weight: 600;">SUBMIT</button>
+                                </div>
+                              </form>
+                        </div>
+                        <div class="col-lg-6 pt-3" data-aos="fade-down">
+                            <div class="row">
+                                <div class="row pb-3">
+                                    <div class="col-lg-6"><h2>Join With Us</h2></div>
+                                    <div class="col-lg-6"><button type="button" class="btn btn-outline-dark rounded-pill" style="font-weight: 600;">APPLY NOW</button></div>
+                                </div>
+                                <div class="row explore-more pt-2">
+                                    <div class="col-lg-8"><h2>Explore more</h2></div>
+                                    <div class="col-lg-8">
+                                        <ul class="footer-links">
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="about.html">About Us</a>
+                                            </li>
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="about.html">Careers</a>
+                                            </li>
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="blog.html">Blog</a>
+                                            </li>
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="blog.html">Privacy Policy</a>
+                                            </li>
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="blog.html">Terms and Conditions</a>
+                                            </li>
+                                            <li class="footer-item py-2">
+                                                <a class="footer-link" href="blog.html">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="row social-media">
+                                    <h2>Follow us</h2>
+                                    <div class="row py-3">
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
+                                       <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--contact form ends-->
+
         <!--footer starts-->
         <section id="footer">
             <footer>
@@ -104,18 +219,18 @@
             $(window).scroll(function(){
                 var scroll = $(window).scrollTop();
                 if (scroll > 300) {
-                    $("#mainNav").css("background" , "#37474F");
-                    $(".navbar-brand").css("color", "white");
-                    if (screen.width >= 992) {
-                    $(".nav-link").css("color", "white");
-                    }
-                    if (screen.width < 992) {
-                    $(".nav-link").css("color", "black");
-                    }
+                    // $("#mainNav").css("background" , "#37474F");
+                    // $(".navbar-brand").css("color", "white");
+                    // if (screen.width >= 992) {
+                    // $(".nav-link").css("color", "white");
+                    // }
+                    // if (screen.width < 992) {
+                    // $(".nav-link").css("color", "black");
+                    // }
                 }
 
                 else{
-                    $("#mainNav").css("background" , "transparent");
+                    $("#mainNav").css("background" , "white");
                     $(".navbar-brand").css("color", "black");  	
                     $(".nav-link").css("color", "black");
                 }
