--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         
     </head>
     <body>
-        <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav id="contactmainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
@@ -34,13 +34,9 @@
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <!--nightmode toggle icon in mobile-->
-                <button class="btn text-right text-white" type="button" style="margin-right: 5px;">
-                    <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
-                </button>
                 <!--overlay content start-->
-                <div class="overlay-content d-flex justify-content-start" style="padding-left:15px;" id="navbarToggler">
-                    <ul class="navbar-nav mb-2 mb-lg-0">
+                <div class="overlay-content" id="navbarToggler">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="mob-nav nav-link active" href="index.html">Home</a>
                     </li>
@@ -75,10 +71,10 @@
                 </ul>
                 <!--contact us button-->
                 <button class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
-                    <a class="btn btn-primary js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
                 </button>
                 <!--nightmode icon-->
-                <button class="btn text-right text-white d-none d-lg-block" type="button" style="margin-right: 5px;">
+                <button class="btn text-right text-white d-none d-lg-block" type="button" style="margin-right:5px;">
                     <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black; font-size: large;"></i>
                 </button>
             </div>
@@ -115,27 +111,40 @@
                         <p class="pt-3">Discuss your plans with us</p>
                         <form action="#" class="row">
                             <div class="col-lg-10 pt-3 px-3 ">
-                              <input type="text" class="form-control form-control-lg" id="validationServer01" required placeholder="Name">
+                              <input type="text" class="form-control" id="validationServer01" required placeholder="Name">
                               <div class="valid-feedback">
                                 Looks good!
                               </div>
                             </div>
-                            <div class="col-lg-3 pt-3 px-3">
-                                <select id="inputState" class="form-select form-control-lg">
-                                <option selected>Code *</option>
-                                <option>+91</option>
-                                <option>+1</option>
-                                </select>
+                            <div class="col-lg-10 pt-3 px-3">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <select id="inputState" class="form-select">
+                                        <option selected>Code *</option>
+                                        <option>+91</option>
+                                        <option>+1</option>
+                                        <option>+971</option>
+                                        <option>+44</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-8">
+                                        <input type="text" class="form-control" id="validationServer01" required placeholder="Contact">
+                                        <div class="valid-feedback">
+                                        Looks good!
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-lg-7 pt-3 px-3 ">
-                                <input type="text" class="form-control form-control-lg" id="validationServer01" required placeholder="Contact">
+                            <div class="col-lg-10 pt-3 px-3 ">
+                                <input type="email" class="form-control" id="validationServer01" required placeholder="Email">
                                 <div class="valid-feedback">
                                 Looks good!
                                 </div>
                             </div>
                             <div class="col-lg-10 pt-3 px-3 mb-3">
-                                <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                             </div>
+                            
                             <div class="col-lg-4 py-3">
                               <button class="btn btn-outline-dark rounded-pill " type="submit" style="font-weight: 600;">SUBMIT</button>
                             </div>
@@ -147,6 +156,7 @@
                 </div>
             </div>
         </section>
+
         <!--newsletter subscription start-->
         <section class="news">
             <div class="container">
@@ -180,27 +190,27 @@
         </section>
         <!--footer ends-->
         <script>
-            $(document).ready(function(){
-            $(window).scroll(function(){
-                var scroll = $(window).scrollTop();
-                if (scroll > 300) {
-                    $("#mainNav").css("background" , "#37474F");
-                    $(".navbar-brand").css("color", "white");
-                    if (screen.width >= 992) {
-                    $(".nav-link").css("color", "white");
-                    }
-                    if (screen.width < 992) {
-                    $(".nav-link").css("color", "black");
-                    }
-                }
+            // $(document).ready(function(){
+            // $(window).scroll(function(){
+            //     var scroll = $(window).scrollTop();
+            //     if (scroll > 300) {
+            //         // $("#mainNav").css("background" , "#37474F");
+            //         // $(".navbar-brand").css("color", "white");
+            //         // if (screen.width >= 992) {
+            //         // $(".nav-link").css("color", "white");
+            //         // }
+            //         // if (screen.width < 992) {
+            //         // $(".nav-link").css("color", "black");
+            //         // }
+            //     }
 
-                else{
-                    $("#mainNav").css("background" , "transparent");
-                    $(".navbar-brand").css("color", "black");  	
-                    $(".nav-link").css("color", "black");
-                }
-            })
-            })
+            //     else{
+            //         $("#mainNav").css("background" , "white");
+            //         $(".navbar-brand").css("color", "black");  	
+            //         $(".nav-link").css("color", "black");
+            //     }
+            // })
+            // })
             AOS.init();
         </script>
     </body>
