--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <!-- <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script> -->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="assets/js/script.js"></script>
         
     </head>
@@ -89,7 +87,7 @@
         </nav>
         
         <header id="full-head" class="masthead text-center text-white d-flex" style="width: 100%;">
-            <div class="container my-auto mx-auto" data-aos="fade-down">
+            <div class="container my-auto mx-auto">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <h1 class="text-uppercase animate__animated animate__pulse ">Website Development Services</h1>
@@ -106,7 +104,7 @@
         </header>
 
         <!--homepage animation start-->
-        <div class="container" data-aos="fade-down">
+        <div class="container">
             <div class="row">
                 <div class="mt-3 mb-3 col-lg-12 animate__animated animate__pulse"><h1 class="cd-headline" style="text-align: center;">We Develop</h1></div>
                 <div class="col-lg-12 mx-auto" style="text-align: center;">
@@ -115,7 +113,7 @@
                         data-period="2000"
                         data-rotate='[ "Amazing Websites !", "Beautiful Applications !", "Chatbots !",  "Digital Strategies" ]'></span>
                 </div>
-                <div class="col-lg-8 mx-auto" style="text-align: center;" data-aos="fade-down">
+                <div class="col-lg-8 mx-auto" style="text-align: center;">
                     <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nobis natus obcaecati repellendus earum distinctio. Obcaecati
                     reiciendis impedit praesentium ratione cum voluptatem architecto, 
@@ -202,7 +200,7 @@
 
         <!--homepage content start-->
         <section class="homepage-next">
-            <div class="mt-5 container" data-aos="fade-down">
+            <div class="mt-5 container">
                 <h1 class="cd-hire" style="text-align: center;">Hire the best Web and Mobile app developers</h1>
                 <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;">
                     <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -220,7 +218,7 @@
 
         <!--accomplishments map start-->
         <section class="accomplishments">
-            <div class="container" style="padding-bottom: 20px;" data-aos="fade-down">
+            <div class="container" style="padding-bottom: 20px;">
                 <div class="row">
                     <div class="col-lg-12 animate__animated animate__pulse" data-aos="fade-down"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
                     <div class="col-lg-10 mx-auto" data-aos="fade-down" style="text-align: center;"><img src="assets/img/workindia1.gif" style="width: 90%;"></div>
@@ -233,7 +231,7 @@
         <section class="our-services">
             <div class="container">
                 <div class="row mb-3 mx-auto animate__animated animate__pulse" style="text-align: center; padding-bottom: 25px;"><h1 class="cd-hire"> Our core services </h1></div>
-                <div class="row" data-aos="fade-down">
+                <div class="row">
                     <div class="col-lg-4 px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%)">
                             <h3 class="title">Web Development</h3>
@@ -259,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row second-list pt-3" data-aos="fade-down">
+                <div class="row second-list pt-3">
                     <div class="col-lg-4 px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
                             <h3 class="title">Search Engine Optimization</h3>
@@ -333,7 +331,7 @@
         <!--newsletter subscription start-->
         <section class="news">
             <div class="container">
-                <div class="row" data-aos="fade-down">
+                <div class="row">
                     <h1 class="cd-hire mt-5 animate__animated animate__pulse">Subscribe to our newsletter</h1>
                     <form action="#">
                     <div class="col-lg-6 mt-3 mb-5">
@@ -353,7 +351,7 @@
         <section class="contact">
             <div class="container pt-5">
                 <div class="row px-3">
-                    <div class="col-lg-6" data-aos="fade-down">
+                    <div class="col-lg-6">
                         <h2>Talk with Us</h2>
                         <p class="pt-3">Discuss your plans with us</p>
                         <form action="#" class="row">
@@ -396,7 +394,7 @@
                             </div>
                           </form>
                     </div>
-                    <div class="col-lg-6 pt-3" data-aos="fade-down">
+                    <div class="col-lg-6 pt-3">
                         <div class="row">
                             <div class="row pb-3">
                                 <div class="col-lg-6"><h2>Join With Us</h2></div>
@@ -485,7 +483,6 @@
                 }
             })
             })
-            AOS.init();
         </script>
     </body>
 </html>
