--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <a id="main-a-Nav" class="navbar-brand mx-auto" href="index.html">Navbar brand</a>
+            <a id="main-a-Nav" class="navbar-brand mx-auto" href="index.html">Updot</a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -216,10 +216,32 @@
 
         <!--accomplishments map start-->
         <section class="accomplishments">
-            <div class="container" style="padding-bottom: 20px;">
+            <div class="container pb-3 mb-5">
                 <div class="row">
                     <div class="col-lg-12 animate__animated animate__pulse" data-aos="fade-down"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
                     <div class="col-lg-10 mx-auto" data-aos="fade-down" style="text-align: center;"><img src="assets/img/workindia1.gif" style="width: 90%;"></div>
+                </div>
+                <div class="row">
+                    <div class="container mx-3 px-3">
+                        <h3>Projects</h3>
+                        <p>Delivered</p>
+                        <span class="total project"></span><span>+</span>
+                    </div>
+                    <div class="container mx-3 px-3">
+                        <h3>Business</h3>
+                        <p>Repeat</p>
+                        <span class="total business"></span><span>%</span>
+                    </div>
+                    <div class="container mx-3 px-3">
+                        <h3>States</h3>
+                        <p>Covered</p>
+                        <span class="total states"></span><!--<span>+</span>-->
+                    </div>
+                    <div class="container mx-3 px-3">
+                        <h3>Team</h3>
+                        <p>size</p>
+                        <span class="total size"></span><span>+</span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -259,7 +281,7 @@
                     <div class="col-lg-4 px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
                             <h3 class="title">Search Engine Optimization</h3>
-                            <div class="img-box"><img src="assets/img/seo-des.svg" style="width: 285px; height: 212px;"></div>
+                            <div class="img-box"><img id="seo" src="assets/img/seo-des.svg"></div>
                             <p class="services-content">Create your own team of developers for your software development project on short term,
                                 long term or permanent basis with guaranteed project delivery at affordable prices.</p>
                         </div>
@@ -287,7 +309,8 @@
 
         <!--values start-->
         <section class="values">
-            <div class="container my-5 start">
+            <!-- display on large screen devices -->
+            <div class="d-none d-lg-block container my-5 start">
                 <div class="d-flex align-items-end">
                     <div class="nav flex-column nav-pills mx-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                       <a class="nav-link active mt-5" id="v-pills-home-tab" data-bs-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><h1>Discover</h1></a>
@@ -321,6 +344,16 @@
                             Unde fugiat ipsa provident dolorem animi ratione.</p>
                       </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- display on small screen devices -->
+            <div class="container mt-5">
+                <div id="mob-values" class="row mx-3 rounded p-3" style="background:#000011;">
+                    <div class="col-sm-12 py-3 ps-5"><h1 id="dddd-values" style="color:white;">Design</h1><p id="ddd-p" style="color:#B6B6B6">that stands out</p></div>
+                    <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Develop</h1><p id="ddd-p" style="color:#B6B6B6">with experts</p></div>
+                    <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Discover</h1><p id="ddd-p" style="color:#B6B6B6">and strategize</p></div>
+                    <div class="col-sm-12  ps-5"><h1 id="dddd-values" style="color:white;">Determine</h1><p id="ddd-p" style="color:#B6B6B6">and optimize</p></div>
                 </div>
             </div>
         </section>
@@ -447,7 +480,10 @@
                 <div class="container">
                     <div class="row">
                             <p class="cp-text text-center">
-                                © Copyright 2020 UpDot. All rights reserved.
+                                © Copyright 2020 UpDot. 
+                            </p>
+                            <p class="cp-text text-center">
+                                All rights reserved.
                             </p>
                     </div>
                 </div>
