--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Updot</title>
         <meta name='description' content="Web & App development Company">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <!--favicon icon-->
+        <link rel="icon" href="assets/img/Favicon.ico" type="image/x-icon" sizes="32x28">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
@@ -26,7 +28,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <a id="main-a-Nav" class="navbar-brand mx-auto" href="index.html">Updot</a>
+            <img src="assets/img/Main Logo.png" style="width: 7%; height: 7%;">
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -310,7 +312,7 @@
         <!--values start-->
         <section class="values">
             <!-- display on large screen devices -->
-            <div class="d-none d-lg-block container my-5 start">
+            <!-- <div class="d-none d-lg-block container my-5 start">
                 <div class="d-flex align-items-end">
                     <div class="nav flex-column nav-pills mx-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                       <a class="nav-link active mt-5" id="v-pills-home-tab" data-bs-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><h1>Discover</h1></a>
@@ -345,10 +347,10 @@
                       </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- display on small screen devices -->
-            <div class="container mt-5">
+            <div class="container mt-5 rounded ps-3" style="background:#000011;">
                 <div id="mob-values" class="row mx-3 rounded p-3" style="background:#000011;">
                     <div class="col-sm-12 py-3 ps-5"><h1 id="dddd-values" style="color:white;">Design</h1><p id="ddd-p" style="color:#B6B6B6">that stands out</p></div>
                     <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Develop</h1><p id="ddd-p" style="color:#B6B6B6">with experts</p></div>
@@ -479,12 +481,11 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                            <p class="cp-text text-center">
-                                © Copyright 2020 UpDot. 
-                            </p>
-                            <p class="cp-text text-center">
-                                All rights reserved.
-                            </p>
+                            <div class="col-lg-6"><img src="assets/img/Footer Logo.png" style="width: 25%;"></div>
+                            <div class="col-lg-6">
+                                <p class="cp-text text-center">
+                                © Copyright 2020 UpDot. All rights reserved.
+                            </p></div>
                     </div>
                 </div>
             </footer>
