fixed color fade by changing background in animate keyframes

--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                            <div class="col-lg-6"><img src="assets/img/Footer Logo.png" style="width: 25%;"></div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-4 ms-5 my-3 pb-3 ps-3"><img src="assets/img/Footer Logo.png" style="width: 50%;"></div>
+                            <div class="col-lg-6 mt-5">
                                 <p class="cp-text text-center">
                                 © Copyright 2020 UpDot. All rights reserved.
                             </p></div>
