fixed color fade timing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <img src="assets/img/Main Logo.png" style="width: 7%; height: 7%;">
+            <a href=""><img src="assets/img/Main Logo.png" style="width: 7%; height: 7%;"></a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -310,7 +310,7 @@
         <!--services end-->
 
         <!--values start-->
-        <section class="values">
+        <!-- <section class="values"> -->
             <!-- display on large screen devices -->
             <!-- <div class="d-none d-lg-block container my-5 start">
                 <div class="d-flex align-items-end">
@@ -350,7 +350,7 @@
             </div> -->
 
             <!-- display on small screen devices -->
-            <div class="container mt-5 rounded ps-3" style="background:#000011;">
+            <!-- <div class="container mt-5 rounded ps-3" style="background:#000011;">
                 <div id="mob-values" class="row mx-3 rounded p-3" style="background:#000011;">
                     <div class="col-sm-12 py-3 ps-5"><h1 id="dddd-values" style="color:white;">Design</h1><p id="ddd-p" style="color:#B6B6B6">that stands out</p></div>
                     <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Develop</h1><p id="ddd-p" style="color:#B6B6B6">with experts</p></div>
@@ -358,7 +358,7 @@
                     <div class="col-sm-12  ps-5"><h1 id="dddd-values" style="color:white;">Determine</h1><p id="ddd-p" style="color:#B6B6B6">and optimize</p></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--values end-->
 
         <!--newsletter subscription start-->
