fixed darkmode about page desktopview

--- a/index.html
+++ b/index.html
@@ -443,7 +443,10 @@
                 <div class="container">
                     <div class="row">
                                 <p class="cp-text text-center">
-                                © Copyright 2020 UpDot. All rights reserved.
+                                © Copyright 2020 UpDot. 
+                            </p>
+                            <p class="cp-text text-center">
+                                All rights reserved. 
                             </p>
                     </div>
                 </div>
