finished stable website with darkmode on desktop view

--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
             </div>
             <!--telegram icon on mobile display-->
             <button class="btn d-md-none" type="button" style="background:transparent;">
-                <i class="fab fa-telegram-plane" onclick="openSubNav()" style="color: rgb(7,7,7);"></i>
+                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="25" height="20">
             </button>
         </nav>
         
+        <!-- colorful main full width header -->
         <header id="full-head" class="masthead text-center text-white d-flex" style="width: 100%;">
             <div class="container my-auto mx-auto">
                 <div class="row">
